--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "classnames": "^2.2.6",
     "gatsby": "^2.3.25",
     "gatsby-image": "^2.0.39",
-    "gatsby-plugin-google-tagmanager": "^2.0.13",
+    "gatsby-plugin-gtag": "^1.0.11",
     "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-material-ui": "^1.2.4",
     "gatsby-plugin-offline": "^2.0.25",
